...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_expand"
                    android:layout_width="@dimen/size_25dp"
                    android:layout_height="@dimen/size_25dp"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/size_5dp"
                    android:background="@drawable/circle"
                    android:contentDescription="@string/Content_description_button_expand"
...
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_heading"
                    android:layout_toEndOf="@id/button_expand"
                    android:orientation="vertical" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_recipe_step"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/fragment_ingredient_container" />
            </RelativeLayout>
        </android.support.design.widget.CoordinatorLayout>
    </ScrollView>
...
