<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_5dp"
        android:layout_marginLeft="@dimen/size_5dp"
        android:layout_marginRight="@dimen/size_5dp"
        android:layout_marginTop="@dimen/size_5dp"
        android:background="@color/dark_olive_green"
        android:elevation="@dimen/elevation_100dp"
        android:layoutDirection="locale"
        android:orientation="vertical"
        android:padding="@dimen/size_5dp">

        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/recycler_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>