<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="stepdetail"
            type="com.example.codelabs.baking.model.Step"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_step_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"
            android:text="@{stepdetail.mDescription}"
            android:textColor="@color/dark_olive_green"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/pale_golden_rod"
            android:elevation="100dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layoutDirection="locale"
            android:padding = "25dp"
            tools:text="sample step" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="vertical"
        android:id = "@+id/root"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <ImageButton
            android:id="@+id/button_previous_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_previous_black_24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:tint="@color/dark_olive_green"
            android:background="@color/pale_golden_rod"
            android:clickable="true"
            android:contentDescription="@string/content_description_back_button"/>
        <ImageButton
            android:id="@+id/button_next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_next_black_24dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:tint="@color/dark_olive_green"
            android:background="@color/pale_golden_rod"
            android:clickable="true"
            android:contentDescription = "@string/content_description_forward_button"/>

    </RelativeLayout>
    </LinearLayout>
</layout>
